[tool.poetry]
name = "roguelite_roomgenerator"
version = "0.1.0"
description = "Roguelite Room Generator"
authors = ["luiherch <hernandezchirlaque@gmail.com>"]
license = "CC-BY-NC"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "1.2.2"
pyvis = "0.3.2"
numpy = "1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
